include/SITypes/SIDimensionality.h

/** @cond INTERNAL */
/** @brief Index constants for the seven SI base dimensions. */
typedef enum {
    kSILengthIndex = 0,
    kSIMassIndex = 1,
    kSITimeIndex = 2,
    kSICurrentIndex = 3,
    kSITemperatureIndex = 4,
    kSIAmountIndex = 5,
    kSILuminousIntensityIndex = 6,
} SIBaseDimensionIndex;
/** @endcond */

/** @brief Parse an SI dimensionality expression into a cached, immutable object. */
SIDimensionalityRef SIDimensionalityParseExpression(OCStringRef expression, OCStringRef *error);
/** @brief Returns the unique type identifier for SIDimensionality objects. */
OCTypeID SIDimensionalityGetTypeID(void);
/** @brief Gets the canonical symbol representation of a dimensionality. */
OCStringRef SIDimensionalityGetSymbol(SIDimensionalityRef theDim);
/**
 * @brief Create a JSON representation of an SIDimensionality.
 *
 * The returned JSON is a string node containing the canonical symbol,
 * e.g., "m/s^2". Caller owns the returned cJSON object.
 *
 * @param dim An SIDimensionalityRef instance.
 * @return A cJSON string object, or cJSON null on failure.
 */
cJSON *SIDimensionalityCreateJSON(SIDimensionalityRef dim);
/**
 * @brief Create an SIDimensionality object from a JSON string node.
 *
 * The input must be a JSON string representing a valid dimensionality symbol,
 * e.g., "m/s^2". If parsing fails, returns NULL.
 *
 * @param json A cJSON string object.
 * @return An SIDimensionalityRef or NULL on failure.
 */
SIDimensionalityRef SIDimensionalityFromJSON(cJSON *json);
/** @brief Returns true if two dimensionalities are strictly equal. */
bool SIDimensionalityEqual(SIDimensionalityRef theDim1, SIDimensionalityRef theDim2);
/** @brief Returns true if dimensionality is physically dimensionless. */
bool SIDimensionalityIsDimensionless(SIDimensionalityRef theDim);
/** @brief Returns true if dimensionality is derived. */
bool SIDimensionalityIsDerived(SIDimensionalityRef theDim);
/** @brief Returns true if dimensionless and not derived by cancellation. */
bool SIDimensionalityIsDimensionlessAndNotDerived(SIDimensionalityRef theDim);
/** @brief Returns true if dimensionless by cancellation of base symbols. */
bool SIDimensionalityIsDimensionlessAndDerived(SIDimensionalityRef theDim);
/** @brief Returns true if dimensionality matches exactly one SI base dimension. */
bool SIDimensionalityIsBaseDimensionality(SIDimensionalityRef theDim);
/** @brief Returns true if two dimensionalities have the same reduced exponents. */
bool SIDimensionalityHasSameReducedDimensionality(SIDimensionalityRef theDim1, SIDimensionalityRef theDim2);
/** @brief Returns true if dimensionality has the specified reduced exponents. */
bool SIDimensionalityHasReducedExponents(SIDimensionalityRef theDim,
                                         int8_t length_exponent,
                                         int8_t mass_exponent,
                                         int8_t time_exponent,
                                         int8_t current_exponent,
                                         int8_t temperature_exponent,
                                         int8_t amount_exponent,
                                         int8_t luminous_intensity_exponent);
/** @brief Returns the canonical dimensionless dimensionality. */
SIDimensionalityRef SIDimensionalityDimensionless(void);
/** @brief Returns the dimensionality for a given base dimension index. */
SIDimensionalityRef SIDimensionalityForBaseDimensionIndex(SIBaseDimensionIndex index);
/** @brief Returns the dimensionality for a single-character base symbol. */
SIDimensionalityRef SIDimensionalityWithBaseDimensionSymbol(OCStringRef symbol, OCStringRef *error);
/** @brief Maps a quantity name to its dimensionality. */
SIDimensionalityRef SIDimensionalityForQuantity(OCStringRef quantity, OCStringRef *error);
/** @brief Returns a dimensionality with all exponents reduced to lowest terms. */
SIDimensionalityRef SIDimensionalityByReducing(SIDimensionalityRef theDimensionality);
/** @brief Returns the nth-root of a dimensionality, or NULL and error if invalid. */
SIDimensionalityRef SIDimensionalityByTakingNthRoot(SIDimensionalityRef theDim, uint8_t root, OCStringRef *error);
/** @brief Multiplies two dimensionalities and reduces to lowest terms. */
SIDimensionalityRef SIDimensionalityByMultiplying(SIDimensionalityRef theDim1, SIDimensionalityRef theDim2, OCStringRef *error);
/** @brief Multiplies two dimensionalities without reducing exponents. */
SIDimensionalityRef SIDimensionalityByMultiplyingWithoutReducing(SIDimensionalityRef theDim1, SIDimensionalityRef theDim2, OCStringRef *error);
/** @brief Divides one dimensionality by another, reduces result. */
SIDimensionalityRef SIDimensionalityByDividing(SIDimensionalityRef theDim1, SIDimensionalityRef theDim2);
/** @brief Divides one dimensionality by another, does not reduce exponents. */
SIDimensionalityRef SIDimensionalityByDividingWithoutReducing(SIDimensionalityRef theDim1, SIDimensionalityRef theDim2);
/** @brief Raises a dimensionality to a real power, reduces exponents. */
SIDimensionalityRef SIDimensionalityByRaisingToPower(SIDimensionalityRef theDim, double power, OCStringRef *error);
/** @brief Raises a dimensionality to a real power, without reducing exponents. */
SIDimensionalityRef SIDimensionalityByRaisingToPowerWithoutReducing(SIDimensionalityRef theDim, double power, OCStringRef *error);
/** @brief Returns all quantity names matching this dimensionality exactly. */
OCArrayRef SIDimensionalityCreateArrayOfQuantities(SIDimensionalityRef theDim);
/** @brief Returns all quantity names with the same reduced dimensionality. */
OCArrayRef SIDimensionalityCreateArrayOfQuantitiesWithSameReducedDimensionality(SIDimensionalityRef theDim);
/** @brief Returns all built-in dimensionalities with the same reduced dimensionality. */
OCArrayRef SIDimensionalityCreateArrayWithSameReducedDimensionality(SIDimensionalityRef theDim);
/** @brief Returns an array of quantity names mapped to the given dimensionality. */
OCArrayRef SIDimensionalityCreateArrayOfQuantityNames(SIDimensionalityRef dim);
/** @brief Returns all quantity names associated with dimensionalities that reduce to the same form as the input. */
OCArrayRef SIDimensionalityCreateArrayOfQuantityNamesWithSameReducedDimensionality(SIDimensionalityRef dim);
/** @brief Prints a concise representation of the dimensionality to stdout. */
void SIDimensionalityShow(SIDimensionalityRef theDim);
/** @brief Prints a detailed, annotated report of the dimensionality to stdout. */
void SIDimensionalityShowFull(SIDimensionalityRef theDim);